[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bylance"
version = "0.1"
authors = [
  { name="Tim Straube", email="hi@optimalpi.com" },
]
description = "A simple financial modelling toolkit"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]